fixed navbar stylink on small and larger screens

--- a/src/index.css
+++ b/src/index.css
@@ -95,9 +95,9 @@ html, body {
   top: 0;
   width: 100%;
   display: flex;
-  justify-content: space-around;
   padding: 20px 0;
   z-index: 10; 
+  justify-content: space-between;
   transition: background-color 0.3s;
   align-items: center;
 }
@@ -112,14 +112,32 @@ html, body {
   font-size: 12px;
   padding: 10px 20px;
   transition: background-color 0.3s, color 0.3s;
+  flex: 1; 
+  text-align: center;
+  position: relative;
 }
 
-.navlink:hover {
-  border-bottom: 2px solid rgb(0, 0, 0);
+.nav-links {
+  display: flex;
+  justify-content: space-between; /* Add this */
+  width: 100%; /* Add this */
 }
 
-.active {
-  border-bottom: 2px solid rgb(0, 0, 0);
+.navlink::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0; /* Start with zero width */
+  height: 2px;
+  background-color: rgb(0, 0, 0);
+  transition: width 0.3s, left 0.3s; /* Animate width and position */
+}
+
+.navlink:hover::after,
+.navlink.active::after {
+  width: 50%; /* Adjust this value to control the width */
+  left: 25%; /* Center the pseudo-element */
 }
 
 #list-container {
@@ -528,28 +546,34 @@ html, body {
 }
 
 .hamburger {
-  display: flex;
-      text-align: center;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 30px;
-  height: 25px;
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 0;
-}
-
-.hamburger .line {
-  width: 100%;
-  height: 3px;
-  background-color: rgb(201, 66, 8);
+  display: none;
 }
 
 @media (max-width: 768px) {
-  .hamburger {
-      display: flex;
-      text-align: center;
+
+  .navbar {
+    display: flex;
+    justify-content: center; /* Centers horizontally */
+    align-items: center;
+  }
+
+.hamburger {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 30px;
+    height: 25px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+  }
+  
+  .hamburger .line {
+    width: 100%;
+    height: 3px;
+    background-color: rgb(201, 66, 8);
   }
 
   .nav-links {
@@ -571,4 +595,18 @@ html, body {
       text-align: center;
       width: 100%;
   }
+
+  .navlink:hover {
+    font-weight: bolder;
+    }
+
+  .active {
+    font-weight: bolder;
+    }
+
+
+.navlink::after {
+  display: none;
+}
+
 }
